2007-06-06 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 401: Solved juju include problems (capture.h does not exist).
	           Version 2.0.0-rc7. 
	* SVN 400: Include juju directory in the package. Thanks to Desmond for
	           spotting this.

2007-06-05 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 399: Forgot to change some version numbers. This is 2.0.0-rc6.
	* SVN 398: Version 2.0.0-rc6
	
2007-06-04 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 397: get optional function registers only if the IIDC version is
	           > 1.30 (not >= 1.30). Thanks to Etienne Bieber.
	
2007-05-08 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 396: added an example program to capture video from a Ladybug
	           camera (Point Grey).
	
2007-04-26 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 395: add memset's in linux/capture.c to avoid valgrind errors
	           (thanks to Jon Schewe)
	* SVN 394: changed "min_bytes" to "unit_bytes" in
	           dc1394_format7_get_packet_para()
	
2007-03-18 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 393: Add a "juju" directory for the new kernel stack from Kristian
		   Hogsberg. Thanks to... Kristian Hogsberg for the big patch ;)

2007-03-12 Peter Antoniac http://sourceforge.net/users/theseinfeld
	* SVN 392: changed Makefile.am, configure.in to include the Doxygen part.
		   Added: acinclude.m4, aminclude.am and Doxyfile.in to configure
		   the Doxygen part. This changes enable the doxygen documentation
		   generation for the project, without interference with previous
		   framework. Added/changed some comments in the Header files
		   (dc1394/control.h, dc1394/conversions.h, dc1394/register.h,
		   dc1394/utils.h) to demonstrate the way the documentation works.

2007-03-01 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 391: change the function returning the number of bytes per pixel
		   to a function that returns bits per pixel. That way we stay