@@ -27,4 +27,5 @@ Markus Niebel
 danalien
 Aravind Sundaresan <a.sundaresan@gmail.com>
 James Sherman <shermanj@umd.edu>
-Mikael Olenfalk
+Mikael Olenfalk <mikael.olenfalk@gmail.com>
+
